--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -197,14 +197,14 @@
        "'madagascar'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "travel_destinations\n",
+    "travel_destinations.append('madagascar')\n",
     "favorite_destination()\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
