--- a/index.ipynb
+++ b/index.ipynb
@@ -217,13 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalize_countries = "
+    "    capitalize_countries = []\n",
+    "    for"
    ]
   },
   {
