--- a/index.ipynb
+++ b/index.ipynb
@@ -217,14 +217,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-24-33bafda14932>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-24-33bafda14932>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    for destination in travel destinations;\u001b[0m\n\u001b[0m                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalize_countries = []\n",
-    "    for destination in travel destinations"
+    "    for destination in travel destinations:\n",
+    "        "
    ]
   },
   {
