--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,7 @@
     "def capitalize_countries():\n",
     "    capitalize_countries = []\n",
     "    for destination in travel destinations:\n",
-    "        capitalize"
+    "        capitalize_countries.append(d)"
    ]
   },
   {
