--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,8 @@
     "def capitalize_countries():\n",
     "    capitalize_countries = []\n",
     "    for destination in travel destinations:\n",
-    "        capitalize_countries.append(d)"
+    "        capitalize_countries.append(destination.title())\n",
+    "        "
    ]
   },
   {
