--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,7 @@
     "    capitalize_countries = []\n",
     "    for destination in travel destinations:\n",
     "        capitalize_countries.append(destination.title())\n",
-    "        "
+    "    return capita"
    ]
   },
   {
