Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,15 +217,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-24-33bafda14932>, line 4)",
+     "evalue": "invalid syntax (<ipython-input-25-926439e277cb>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-24-33bafda14932>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    for destination in travel destinations;\u001b[0m\n\u001b[0m                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-926439e277cb>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    for destination in travel destinations:\u001b[0m\n\u001b[0m                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -235,7 +235,7 @@
     "    capitalize_countries = []\n",
     "    for destination in travel destinations:\n",
     "        capitalize_countries.append(destination.title())\n",
-    "    return capita"
+    "    return capitalize_countries\n"
    ]
   },
   {
